--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,68 @@
 <div class="alert alert-warning text-center" role="alert" th:if="${account != null && !account?.emailCheck}">
     가입시 기입한 이메일에 인증링크를 보냈습니다. 인증링크를 통해 회원가입이 정상적으로 완료되며, 그 이전까지는 모든 서비스를 이용하실 수 없습니다.
 </div>
-
+<div class="container" sec:authorize="!isAuthenticated()">
+    <div class="tracking position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center">
+        <div class="col-md-12 p-lg-5 mx-auto my-5">
+            <h1 class="display-3 fw-normal">같이하면 더 가치있다</h1>
+            <p class="lead fw-normal">모임 웹 서비스 가치하자</p>
+            <a class="btn btn-outline-secondary">회원가입</a>
+        </div>
+    </div>
+</div>
+<div class="container" sec:authorize="isAuthenticated()">
+    <div class="position-relative overflow-hidden m-md-3 text-center">
+        <div class="col-md-12 mx-auto my-5">
+            <h1 class="display-3 fw-normal" th:text="${account.nickname} +'님 어서오세요'"></h1>
+            <p class="lead fw-normal">모임 웹 서비스 가치하자</p>
+            <a class="btn btn-outline-secondary">회원가입</a>
+        </div>
+    </div>
+</div>
+<div class="row justify-content-center">
+    <div class="col-sm-10">
+        <div class="row">
+            <div class="col-md-3" th:each="together: ${togetherPage}" th:classappend="i == ${togetherPage.size()}">
+                <div class="card mb-3 shadow-sm">
+                    <img th:src="${together.banner}" class="context card-img-top" th:alt="${together.banner}">
+                     <div class="card-body">
+                         <div class="d-flex justify-content-between align-items-center">
+                        <a th:href="@{'/together/' + ${together.path}}" class="text-decoration-none">
+                            <h5 class="card-text context" th:text="${together.title}"></h5>
+                        </a>
+                             <span class="d-inline-block">
+                                        <button class="btn btn-primary btn-sm" th:text="${together.togetherType.krName}" style="pointer-events: none;" type="button" disabled></button>
+                             </span>
+                         </div>
+                        <p class="card-text" th:text="${together.shortIntroduce}">짧은 소개</p>
+                        <p class="card-text context">
+                            <span th:if="${together.tags.size() == 0} and ${together.zones.size() == 0}" class="d-inline-block">
+                                        <button class="btn btn-primary btn-sm" th:text="${'주제없음'}" style="pointer-events: none;" type="button" disabled></button>
+                            </span>
+                                    <span th:each="tag: ${together.tags}" class="d-inline-block">
+                                        <button class="btn btn-primary btn-sm" th:text="${tag.title}" style="pointer-events: none;" type="button" disabled></button>
+                                    </span>
+                            <span th:each="zone: ${together.zones}" class="d-inline-block">
+                                     <button class="btn btn-primary btn-sm" th:text="${zone.city}" style="pointer-events: none;" type="button" disabled></button>
+                                </span>
+                        </p>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <small class="text-muted">
+                                <i class="fa fa-user-circle"></i>
+                                <span th:text="${together.members.size()}"></span>명
+                            </small>
+                            <small class="text-muted date" th:text="${together.publishedDateTime}"></small>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div th:replace="fragments.html :: footer"></div>
+<div th:replace="fragments.html :: date-time"></div>
+<script type="application/javascript">
+
+</script>
 </body>
 </html>
