--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -8,27 +8,12 @@
 <div class="container">
     <div class="py-5 text-center">
         <p class="lead" th:if="${togetherPage.getTotalElements() == 0}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디가 없습니다.
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 투게더가 없습니다.
         </p>
         <p class="lead" th:if="${togetherPage.getTotalElements() > 0}">
-            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 스터디를
+            <strong th:text="${keyword}" id="keyword" class="context"></strong>에 해당하는 투게더를
             <span th:text="${togetherPage.getTotalElements()}"></span>개 찾았습니다.
         </p>
-        <div class="dropdown">
-            <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                검색 결과 정렬 방식
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'publishedDateTime')}? active"
-                   th:href="@{'/search/together?sort=publishedDateTime,desc&keyword=' + ${keyword}}">
-                    스터디 공개일
-                </a>
-                <a class="dropdown-item" th:classappend="${#strings.equals(sortProperty, 'memberCount')}? active"
-                   th:href="@{'/search/together?sort=memberCount,desc&keyword=' + ${keyword}}">
-                    멤버수
-                </a>
-            </div>
-        </div>
     </div>
     <div class="row justify-content-center">
         <div class="col-sm-10">
