--- a/src/main/resources/templates/together/create.html
+++ b/src/main/resources/templates/together/create.html
@@ -18,17 +18,17 @@
                 <small id="pathHelp" class="form-text text-muted">
                     한글, 영문, 숫자, 대시(-), 언더바(_)를 사용하여 2자 이상 20자 이내로 입력하세요. 투게더의 주소로 사용됩니다.
                 </small>
-                <small class="invalid-feedback">스터디 경로를 입력하세요.</small>
+                <small class="invalid-feedback">투게더 경로를 입력하세요.</small>
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('path')}" th:errors="*{path}"></small>
             </div>
             <div class="form-group mt-2">
                 <label for="title">투게더 이름</label>
                 <input id="title" type="text" th:field="*{title}" class="form-control"
-                       placeholder="스터디 이름" aria-activedescendant="titleHelp" required max="50">
+                       placeholder="투게더 이름" aria-activedescendant="titleHelp" required max="50">
                 <small id="titleHelp" class="form-text text-muted">
-                    50자 이내로 해당 스터디의 이름을 등록해주세요.
+                    50자 이내로 해당 투게더의 이름을 등록해주세요.
                 </small>
-                <small class="invalid-feedback">스터디 이름을 입력해주세요.</small>
+                <small class="invalid-feedback">투게더 이름을 입력해주세요.</small>
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></small>
             </div>
             <div class="form-group mt-2">
@@ -43,28 +43,28 @@
                 </p>
             </div>
             <div class="form-group mt-2">
-                <label for="shortIntroduce">간략한 스터디 소개</label>
+                <label for="shortIntroduce">간략한 투게더 소개</label>
                 <textarea id="shortIntroduce" type="textarea" th:field="*{shortIntroduce}" class="form-control"
                           placeholder="간략한 소개" aria-describedby="shortIntroduceHelp" required maxlength="100"></textarea>
                 <small id="shortIntroduceHelp" class="form-text text-muted">
-                    해당 스터디의 주제, 목적을 100자 이내로 설명 및 소개해주세요.
+                    해당 투게더의 주제, 목적을 100자 이내로 설명 및 소개해주세요.
                 </small>
                 <small class="invalid-feedback">짧게 입력해주세요.</small>
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('shortIntroduce')}" th:errors="*{shortIntroduce}"></small>
             </div>
             <div class="form-group mt-2">
-                <label for="longIntroduce">상세한 스터디 소개</label>
+                <label for="longIntroduce">상세한 투게더 소개</label>
                 <textarea id="longIntroduce" type="text" th:field="*{longIntroduce}" class="form-control"
-                          placeholder="스터디 이름" aria-activedescendant="longIntroduceHelp" required></textarea>
+                          placeholder="투게더 이름" aria-activedescendant="longIntroduceHelp" required></textarea>
                 <small id="longIntroduceHelp" class="form-text text-muted">
-                    해당 스터디의 자세한 운영 계획을 상세히 적어주세요.
+                    해당 투게더의 자세한 운영 계획을 상세히 적어주세요.
                 </small>
-                <small class="invalid-feedback">자세하고 꼼꼼한 운영 계획은 스터디원을 부릅니다.</small>
+                <small class="invalid-feedback">자세하고 꼼꼼한 운영 계획은 투게더에 멤버들을 끌어모읍니다.</small>
                 <small class="form-text text-danger" th:if="${#fields.hasErrors('longIntroduce')}" th:errors="*{longIntroduce}"></small>
             </div>
             <div class="form-group mt-2">
                 <button class="btn btn-primary btn-block" type="submit"
-                        aria-describedby="submitHelp">스터디 만들기</button>
+                        aria-describedby="submitHelp">투게더 만들기</button>
             </div>
         </form>
     </div>
