일정 추가(미완성),댓글 수정 버그 해결

--- a/src/main/resources/templates/account/settings.html
+++ b/src/main/resources/templates/account/settings.html
@@ -209,6 +209,7 @@
     });
   });
 </script>
+<script th:replace="fragments.html :: csrf"></script>
 <div th:replace="fragments.html :: update-tags (baseUrl='/settings/'+${account.getNickname()})"></div>
 <div th:replace="fragments.html :: update-zones (baseUrl='/settings/'+${account.getNickname()})"></div>
 </body>
