--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,14 +22,15 @@
         <div class="col-md-12 mx-auto my-5">
             <h1 class="display-3 fw-normal" th:text="${account.nickname} +'님 어서오세요'"></h1>
             <p class="lead fw-normal">모임 웹 서비스 가치하자</p>
-            <a class="btn btn-outline-secondary">회원가입</a>
+            <a class="btn btn-outline-dark">회원가입</a>
         </div>
     </div>
 </div>
 <div class="row justify-content-center">
     <div class="col-sm-10">
-        <div class="row">
-            <div class="col-md-3" th:each="together: ${togetherPage}" th:classappend="i == ${togetherPage.size()}">
+        <div class="tracking h2 text-center">가치있는 시간을 만들어봐요</div>
+        <div class="row p-4">
+            <div class="col-md-3 tracking" th:each="together: ${togetherPage}" th:classappend="i == ${togetherPage.size()}">
                 <div class="card mb-3 shadow-sm">
                     <img th:src="${together.banner}" class="context card-img-top" th:alt="${together.banner}">
                      <div class="card-body">
@@ -38,19 +39,19 @@
                             <h5 class="card-text context" th:text="${together.title}"></h5>
                         </a>
                              <span class="d-inline-block">
-                                        <button class="btn btn-primary btn-sm" th:text="${together.togetherType.krName}" style="pointer-events: none;" type="button" disabled></button>
+                                        <button class="btn btn-outline-dark btn-sm" th:text="${together.togetherType.krName}" style="pointer-events: none;" type="button" disabled></button>
                              </span>
                          </div>
                         <p class="card-text" th:text="${together.shortIntroduce}">짧은 소개</p>
                         <p class="card-text context">
                             <span th:if="${together.tags.size() == 0} and ${together.zones.size() == 0}" class="d-inline-block">
-                                        <button class="btn btn-primary btn-sm" th:text="${'주제없음'}" style="pointer-events: none;" type="button" disabled></button>
+                                        <button class="btn btn-outline-dark btn-sm" th:text="${'주제없음'}" style="pointer-events: none;" type="button" disabled></button>
                             </span>
                                     <span th:each="tag: ${together.tags}" class="d-inline-block">
-                                        <button class="btn btn-primary btn-sm" th:text="${tag.title}" style="pointer-events: none;" type="button" disabled></button>
+                                        <button class="btn btn-outline-dark btn-sm" th:text="${tag.title}" style="pointer-events: none;" type="button" disabled></button>
                                     </span>
                             <span th:each="zone: ${together.zones}" class="d-inline-block">
-                                     <button class="btn btn-primary btn-sm" th:text="${zone.city}" style="pointer-events: none;" type="button" disabled></button>
+                                     <button class="btn btn-outline-dark btn-sm" th:text="${zone.city}" style="pointer-events: none;" type="button" disabled></button>
                                 </span>
                         </p>
                         <div class="d-flex justify-content-between align-items-center">
@@ -69,7 +70,13 @@
 <div th:replace="fragments.html :: footer"></div>
 <div th:replace="fragments.html :: date-time"></div>
 <script type="application/javascript">
+    $(function () {
+        var animation = document.getElementsByClassName("tracking")
 
+        for(var i = 0; i< animation.length; i++){
+            animation[i].style.animationDelay = i*0.25+"s";
+        }
+    })
 </script>
 </body>
 </html>
