--- a/src/main/resources/templates/together/board/view.html
+++ b/src/main/resources/templates/together/board/view.html
@@ -30,31 +30,31 @@
       <div class="ms-2 me-auto">
         <div class="fw-bold fs-5" th:text="${post.title}">
         </div>
-          <h6 class="calendar" th:text="${post.reportingDate}"></h6>
-        </div>
+        <h6 class="calendar" th:text="${post.reportingDate}"></h6>
+      </div>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-start">
       <div th:utext="${post.content}">
       </div>
     </li>
     <li class="list-group-item d-flex justify-content-between align-items-start" th:each="comment: ${post.comments}">
-          <svg th:if="${#strings.isEmpty(comment.writer.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
-               th:data-jdenticon-value="${post.writer.nickname}" width="64px" height="64px"></svg>
-          <img th:if="${!#strings.isEmpty(comment.writer.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
-               th:src="${comment.writer.profileImage}" width="64px" height="64px"/>
+      <svg th:if="${#strings.isEmpty(comment.writer.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
+           th:data-jdenticon-value="${post.writer.nickname}" width="64px" height="64px"></svg>
+      <img th:if="${!#strings.isEmpty(comment.writer.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
+           th:src="${comment.writer.profileImage}" width="64px" height="64px"/>
       <div class="ms-2 me-auto">
-          <h5 th:text="${comment.writer.nickname}"></h5>
-          <p id="commentContent" class="card-text mb-auto" th:text="${comment.content}"></p>
-          <form id="commentEditForm" class="col" th:action="@{'/together/' + ${together.path} + '/board/' + ${post.id} +'/comment/'+${comment.id} +'/edit'}" th:object="${commentForm}" method="post">
-            <input type="text" th:field="*{content}" class="form-control"/>
-          </form>
-        </div>
+        <h5 th:text="${comment.writer.nickname}"></h5>
+        <p th:id="${'commentContent'+comment.id}" class="card-text mb-auto" th:text="${comment.content}"></p>
+        <form th:id="${'commentEditForm'+comment.id}" style="display: none" class="col" th:action="@{'/together/' + ${together.path} + '/board/' + ${post.id} +'/comment/'+${comment.id} +'/edit'}" th:object="${commentForm}" method="post">
+          <input type="text" th:field="*{content}" class="form-control"/>
+        </form>
+      </div>
       <div class="ms-2">
-      <span class="calendar" th:text="${comment.reportingDate}"></span>
-      <span class="text-end" th:if="${comment.isMine(#authentication.principal)}">
+        <span class="calendar" th:text="${comment.reportingDate}"></span>
+        <span class="text-end" th:if="${comment.isMine(#authentication.principal)}">
         <p>
-          <button id="commentEditCancel" class="btn btn-primary btn-sm" type="button" th:text="${'취소'}"></button>
-          <button id="commentEdit" class="btn btn-primary btn-sm" type="button" th:text="${'수정'}"></button>
+          <button th:id="${'commentEditCancel'+comment.id}" th:onclick="commentEditCancel( [[${comment.id}]] )" style="display: none" class="btn btn-primary btn-sm" type="button" th:text="${'취소'}"></button>
+          <button th:id="${'commentEdit'+comment.id}" th:onclick="editComment( [[${comment.id}]] )" class="btn btn-primary btn-sm" type="button" th:text="${'수정'}"></button>
         <a class="btn btn-danger btn-sm"  type="button" th:text="${'삭제'}" data-bs-toggle="modal" data-bs-target="#removeModal"
            th:data-commentid="${comment.id}" th:data-postid="${post.id}" th:data-type="${'댓글'}"></a>
         </p>
@@ -62,10 +62,10 @@
       </div>
     </li>
     <li class="list-group-item d-flex justify-content-start align-items-start">
-        <svg th:if="${#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
-             th:data-jdenticon-value="${account.nickname}" width="64px" height="64px"></svg>
-        <img th:if="${!#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
-             th:src="${account.profileImage}" width="64px" height="64px"/>
+      <svg th:if="${#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
+           th:data-jdenticon-value="${account.nickname}" width="64px" height="64px"></svg>
+      <img th:if="${!#strings.isEmpty(account.profileImage)}" class="img-fluid float-left rounded img-thumbnail"
+           th:src="${account.profileImage}" width="64px" height="64px"/>
       <form class="col-sm-10 ms-2 mt-3" th:action="@{'/together/' + ${together.path} + '/board/' + ${post.id} +'/comment'}" th:object="${commentForm}" method="post">
         <input id="content" type="text" th:field="*{content}" class="form-control align-middle">
       </form>
@@ -73,7 +73,7 @@
   </ul>
   <div class="d-flex justify-content-end">
     <a class="btn btn-primary btn-sm" type="button" th:text="${'목록'}" th:href="@{'/together/' + ${together.path} + '/board'}"></a>
-  <span th:if="${post.isMine(#authentication.principal)}">
+    <span th:if="${post.isMine(#authentication.principal)}">
         <a class="btn btn-primary btn-sm" type="button" th:text="${'수정'}" th:href="@{'/together/' + ${together.path} + '/board/' +${post.id} + '/edit'}"></a>
         <a class="btn btn-danger btn-sm"  type="button" th:text="${'삭제'}" data-bs-toggle="modal" data-bs-target="#removeModal" th:data-postid="${post.id}" th:data-type="${'게시글'}"></a>
       </span>
@@ -99,12 +99,11 @@
     </div>
   </div>
 
-<div th:replace="fragments.html :: footer"></div>
-<div th:replace="fragments.html :: date-time"></div>
+  <div th:replace="fragments.html :: footer"></div>
+  <div th:replace="fragments.html :: date-time"></div>
 </div>
 <script type="application/javascript">
-  $("#commentEditForm").hide();
-  $("#commentEditCancel").hide();
+
   $(function () {
     var removeModal = document.getElementById('removeModal')
     removeModal.addEventListener('show.bs.modal', function (e) {
@@ -131,20 +130,28 @@
       modalBodyInput.textContent = type + '을 삭제하시겠습니까?'
 
     })
-
-    $("#commentEdit").click(function() {
-      $("#commentEdit").hide();
-      $("#commentContent").hide();
-      $("#commentEditForm").show();
-      $("#commentEditCancel").show();
-    })
-    $("#commentEditCancel").click(function() {
-      $("#commentEdit").show();
-      $("#commentContent").show();
-      $("#commentEditForm").hide();
-      $("#commentEditCancel").hide();
-    })
   })
 </script>
+<th:block layout:fragment="script">
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+
+    function editComment(id) {
+        $("#commentEdit"+id).hide();
+        $("#commentContent"+id).hide();
+        $("#commentEditForm"+id).show();
+        $("#commentEditCancel"+id).show();
+    }
+    function commentEditCancel(id) {
+      $("#commentEdit"+id).show();
+      $("#commentContent"+id).show();
+      $("#commentEditForm"+id).hide();
+      $("#commentEditCancel"+id).hide();
+    }
+    /*[- end of function -]*/
+
+    /*]]>*/
+  </script>
+</th:block>
 </body>
 </html>
