--- a/src/main/resources/templates/together/schedule/view.html
+++ b/src/main/resources/templates/together/schedule/view.html
@@ -10,23 +10,12 @@
     <div th:replace="fragments.html :: together-menu (schedule)"></div>
     <div id='calendar' style="background-color: white"></div>
 </div>
-<div name="scheduleList" th:each="schedule: ${together.schedules}" th:text="${schedule.title + '/' +schedule.getStart + '/' +schedule.getEnd+ '/'+schedule.id}"></div>
 <div th:replace="fragments.html :: footer"></div>
-<script th:replace="fragments.html :: csrf"></script>
 <script src="/node_modules/moment/moment.js"></script>
 <script type="application/javascript">
     document.addEventListener('DOMContentLoaded', function() {
         var url = document.location.href;
-        var scheduleList = document.getElementsByName("scheduleList")
-        var schedule = []
-        scheduleList.forEach(function (schedules,index, array) {
-            var split = schedules.innerText.split('/')
-            var data = {};
-            data.title = split[0]
-            data.start = split[1]
-            data.end = split[2]
-            schedule.push(data)
-        })
+
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
             initialView: 'dayGridMonth',
@@ -53,7 +42,9 @@
         });
         calendar.render();
         calendar.on('dateClick', function(info) {
-            if(moment().isBefore(info.dateStr)) {
+            var date = moment(info.dateStr).format('YYYY-MM-DD')
+            var now = moment().format('YYYY-MM-DD')
+            if(now <= date) {
                 var base_url = window.location.pathname + "/create?startDate=" +info.dateStr
                 location.replace(base_url);
             }
